Fixed UsersArtistRatings table.

--- a/app/views/users_artist_ratings/_form.html.erb
+++ b/app/views/users_artist_ratings/_form.html.erb
@@ -16,8 +16,12 @@
     <%= f.number_field :artist_id %>
   </div>
   <div class="field">
-    <%= f.label :rating_id %><br />
-    <%= f.number_field :rating_id %>
+    <%= f.label :user_id %><br />
+    <%= f.number_field :user_id %>
+  </div>
+  <div class="field">
+    <%= f.label :rating %><br />
+    <%= f.number_field :rating %>
   </div>
   <div class="actions">
     <%= f.submit %>
