--- a/app/views/survey/index.html.erb
+++ b/app/views/survey/index.html.erb
@@ -128,5 +128,6 @@
             <%= label_tag(:artist4_10, "10") %>
         <div><%= submit_tag("Submit") %></div>
     <% end %>
+<% else %>
 
 <% end %>
