CSS and other changes to make the interface look nicer.

--- a/app/views/recommendations/index.html.erb
+++ b/app/views/recommendations/index.html.erb
@@ -1,14 +1,37 @@
 <h1>Recommendations for <%= display_username(session[:id]) %></h1>
 
-<table cellspacing="50">
 <% i = 1 %>
 <% @recommendations.each do |recommendation| %>
-  <tr class="recommendation">
-    <td><%= i %>.</td>
+    <table class="recommendation">
+    <td><%= i %>. </td>
     <% @concert = get_concert(recommendation.concert_id) %>
     <td><table>
       <tr><td><%= image_tag(Artist.find(@concert.artist_id).image) %></td></tr>
       <tr><td><%= (Artist.find(@concert.artist_id)).name %> Live in Concert</td></tr>
+      <tr>  <td>Recommendation Rating:
+      <% if recommendation.rating > 25 %>
+          <%=  image_tag("/images/stars.gif") %>
+          <%=  image_tag("/images/stars.gif") %>
+          <%=  image_tag("/images/stars.gif") %>
+          <%=  image_tag("/images/stars.gif") %>
+      <% elsif recommendation.rating > 18 and recommendation.rating < 25 %>
+          <%=  image_tag("/images/stars.gif") %>
+          <%=  image_tag("/images/stars.gif") %>
+          <%=  image_tag("/images/stars.gif") %>
+          <%=  image_tag("/images/blankbigstar.gif") %>
+      <% elsif recommendation.rating > 8 and recommendation.rating < 18 %>
+          <%=  image_tag("/images/stars.gif") %>
+          <%=  image_tag("/images/stars.gif") %>
+          <%=  image_tag("/images/blankbigstar.gif") %>
+          <%=  image_tag("/images/blankbigstar.gif") %>
+      <% else %>
+          <%=  image_tag("/images/stars.gif") %>
+          <%=  image_tag("/images/blankbigstar.gif") %>
+          <%=  image_tag("/images/blankbigstar.gif") %>
+          <%=  image_tag("/images/blankbigstar.gif") %>
+      <%  end %>
+        </td>
+     </tr>
       <tr><td>
         <table>
           <tr><td>Venue:</td><td><%= (Venue.find(@concert.venue_id)).name %></td></tr>
@@ -22,39 +45,13 @@
               <%= image_tag('/images/smallstar.gif') %>
         <% end %>
         <% (1..(10-(Artist.find(@concert.artist_id)).rating)).each do  %>
-              <%= image_tag('/images/blankstar.jpg') %>
-        <% end %>
-        &nbsp;&nbsp;<%= (Artist.find(@concert.artist_id)).rating %>/10</td></tr>
-    </table></td>
-    <td>
-      <% if recommendation.rating > 30 %>
-          <%=  image_tag("/images/stars.gif") %>
-          <%=  image_tag("/images/stars.gif") %>
-          <%=  image_tag("/images/stars.gif") %>
-          <%=  image_tag("/images/stars.gif") %>
-      <% elsif recommendation.rating > 20 and recommendation.rating < 30 %>
-          <%=  image_tag("/images/stars.gif") %>
-          <%=  image_tag("/images/stars.gif") %>
-          <%=  image_tag("/images/stars.gif") %>
-          <%=  image_tag("/images/blankbigstar.jpg") %>
-      <% elsif recommendation.rating > 10 and recommendation.rating < 20 %>
-          <%=  image_tag("/images/stars.gif") %>
-          <%=  image_tag("/images/stars.gif") %>
-          <%=  image_tag("/images/blankbigstar.jpg") %>
-          <%=  image_tag("/images/blankbigstar.jpg") %>
-      <% else %>
-          <%=  image_tag("/images/stars.gif") %>
-          <%=  image_tag("/images/blankbigstar.jpg") %>
-          <%=  image_tag("/images/blankbigstar.jpg") %>
-          <%=  image_tag("/images/blankbigstar.jpg") %>
-      <%  end %>
-
-    </td>
-    <td><%= recommendation.explanation %></td>
-  </tr>
+              <%= image_tag('/images/blankstar.gif') %>
+        <% end %></td></tr>
+      </table></td>
+    <td><%= recommendation.explanation %> </td>
+   </table>
   <% i=i+1 %>
 <% end %>
-</table>
 
 <br />
 
