--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>CSC554</title>
+  <title>Concert Recommendation</title>
+  <%= stylesheet_link_tag "main" %>
 </head>
 <body>
-<h1>Concert Recommendation System</h1>
+<div id="banner" >
+<h1 class = "page_title">Concert Recommendation System</h1>
 <table>
   <tr>
     <td>
@@ -16,7 +18,7 @@
       <% end %>
   </tr>
 </table>
-<hr>
+  </div>
  <% flash.each do |key, value| %>
           <div class="flash <%= key %>"><%= value %></div>
           <hr>
