--- a/app/views/survey/index.html.erb
+++ b/app/views/survey/index.html.erb
@@ -126,7 +126,7 @@
             <%= label_tag(:artist4_9, "9") %>
             <%= radio_button_tag(:artist4_rating, 10) %>
             <%= label_tag(:artist4_10, "10") %>
-        <div><%= submit_tag("Submit") %></div>
+        <div><span><%= submit_tag("Submit") %> <a href="javascript:window.history.back()">Cancel</a></span></div>
     <% end %>
 <% else %>
 
